[EVENT_COMPONENT]: First sketch

--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -11,5 +11,7 @@ $red: #e94f4f;
 $green: #42b5a4;
 $grey: #c0c0c0;
 $grey-secundary: #554b4b;
+$grey-tertiary: #a29494;
 $yellow: #f3e563;
 $white: #fff;
+$black: #000;
