[HOME_SCREEN]: First home sketch

--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -12,6 +12,7 @@ $green: #42b5a4;
 $grey: #c0c0c0;
 $grey-secundary: #554b4b;
 $grey-tertiary: #a29494;
+$grey-quartenary: #40474b;
 $yellow: #f3e563;
 $white: #fff;
 $black: #000;
