[SIDEBAR]: Sidebar improves

--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -7,11 +7,14 @@ $blue-lighter: #4c43bd;
 $icon-main: #645bd0;
 $icon-secundary: #9d96f0;
 
-$red: #e94f4f;
-$green: #42b5a4;
+/* Grey Variations */
 $grey: #c0c0c0;
 $grey-secundary: #554b4b;
 $grey-tertiary: #a29494;
+$grey-darker: #40474B;
+
+$red: #e94f4f;
+$green: #42b5a4;
 $yellow: #f3e563;
 $white: #fff;
 $black: #000;
