--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,3 +4,12 @@ $userbar-width: 60vw;
 $transition-duration: 150ms;
 $ease-in: cubic-bezier(0.445, 0.05, 0.55, 0.95) $transition-duration;
 $ease-out: cubic-bezier(0.39, 0.575, 0.565, 1) $transition-duration;
+
+
+@keyframes inputZoom {
+    0%       { transform: scale(1.00); }
+    25%      { transform: scale(0.95); }
+    50%      { transform: scale(1.00); }
+    75%      { transform: scale(1.05); }
+    100%     { transform: scale(1.00); }
+}
